--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agent-graph",
+  "name": "@agent-graph/core",
   "version": "0.0.1",
   "description": "A lightweight AI Agent orchestration solution",
   "keywords": [
