--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "npm publish --access public"
   },
   "exports": {
     ".": {
